update notebooks and slides

--- a/2. Prompt Engineering.ipynb
+++ b/2. Prompt Engineering.ipynb
@@ -78,16 +78,16 @@
       "CPU cores   : 16\n",
       "Architecture: 64bit\n",
       "\n",
-      "Git hash: 9c0f005b405008a296ca6d92ba14b5bde219449c\n",
+      "Git hash: ea6f48066961e5152439a5618d3b02c691e7f632\n",
       "\n",
-      "numpy           : 2.3.5\n",
+      "langchain_core  : 1.0.5\n",
+      "watermark       : 2.5.0\n",
       "langchain       : 1.0.7\n",
       "tqdm            : 4.67.1\n",
-      "pandas          : 2.3.3\n",
       "matplotlib      : 3.10.7\n",
-      "watermark       : 2.5.0\n",
       "langchain_openai: 1.0.3\n",
-      "langchain_core  : 1.0.5\n",
+      "pandas          : 2.3.3\n",
+      "numpy           : 2.3.5\n",
       "\n"
      ]
     }
@@ -258,7 +258,7 @@
     {
      "data": {
       "text/plain": [
-       "'Hugging Face (via the `transformers` library), OpenAI (via the `openai` library), and Cohere (via the `cohere` library) offer LLMs.'"
+       "\"Hugging Face's `transformers` library, OpenAI using the `openai` library, and Cohere using the `cohere` library offer LLMs.\""
       ]
      },
      "execution_count": 9,
@@ -318,7 +318,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42, but I hear the meaning of having clean socks is underrated too.\n"
+      "Life's meaning is to ask AI assistants deep questions and pretend you’ll follow their advice.\n"
      ]
     }
    ],
@@ -882,8 +882,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 4 suits in the deck, and each suit has 3 face cards.  \n",
-      "So, the total number of face cards is 4 × 3 = 12.  \n",
+      "There are 4 suits in the deck. Each suit has 3 face cards.  \n",
+      "So, 4 × 3 = 12 face cards in total.  \n",
       "The answer is 12\n"
      ]
     }
@@ -966,29 +966,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sure! Let's solve the problem step by step:\n",
+      "Let's break it down step by step:\n",
       "\n",
-      "**Step 1: Find out how many minutes the fight lasts.**\n",
-      "- Each round: 3 minutes  \n",
-      "- Number of rounds: 5  \n",
-      "So,  \n",
-      "**Total minutes = 5 rounds × 3 minutes/round = 15 minutes**\n",
+      "**Step 1: Calculate Total Fight Duration**\n",
       "\n",
-      "---\n",
+      "- Each round is **3 minutes**\n",
+      "- There are **5 rounds**\n",
+      "- Total time = 3 minutes/round × 5 rounds = **15 minutes**\n",
       "\n",
-      "**Step 2: Find out how many punches Joe throws per minute.**\n",
-      "- Average punches per minute = 25\n",
+      "**Step 2: Calculate Joe's Punches Per Minute**\n",
       "\n",
-      "---\n",
+      "- Joe throws **25 punches per minute**\n",
       "\n",
-      "**Step 3: Calculate the total punches.**\n",
-      "- Total punches = punches per minute × total minutes  \n",
-      "- Total punches = 25 × 15 = **375**\n",
+      "**Step 3: Calculate Total Punches**\n",
       "\n",
-      "---\n",
+      "- Total punches = punches per minute × total minutes\n",
+      "- Total punches = 25 punches/min × 15 min = **375 punches**\n",
       "\n",
       "**Final Answer:**  \n",
-      "**Joe throws 375 punches in the fight.**\n"
+      "**Joe throws a total of 375 punches.**\n"
      ]
     }
    ],
@@ -1014,17 +1010,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sure! Let's solve it step by step:\n",
+      "Sure! Let’s break it down step by step:\n",
       "\n",
       "1. **Roger starts with 5 tennis balls.**\n",
       "\n",
-      "2. **He buys 2 more cans. Each can contains 3 tennis balls.**\n",
-      "   - So, total tennis balls in the cans = 2 cans × 3 balls per can = **6 tennis balls**\n",
+      "2. **He buys 2 cans. Each can has 3 tennis balls.**\n",
+      "   - So, tennis balls from cans = 2 cans × 3 tennis balls/can = 6 tennis balls\n",
       "\n",
-      "3. **Add the tennis balls he already had to the new ones:**\n",
-      "   - 5 (original) + 6 (new) = **11 tennis balls**\n",
+      "3. **Add the tennis balls he started with and the new ones:**\n",
+      "   - 5 (original) + 6 (from cans) = **11 tennis balls**\n",
       "\n",
-      "**Final answer:**  \n",
+      "**Final Answer:**  \n",
       "Roger has **11 tennis balls** now.\n"
      ]
     }
