--- a/4. Whisper.ipynb
+++ b/4. Whisper.ipynb
@@ -17,19 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6cf47f33",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The watermark extension is already loaded. To reload it, use:\n",
-      "  %reload_ext watermark\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import Counter, defaultdict\n",
     "import random\n",
@@ -62,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "acecf310",
    "metadata": {},
    "outputs": [
@@ -82,14 +73,14 @@
       "CPU cores   : 16\n",
       "Architecture: 64bit\n",
       "\n",
-      "Git hash: 9c0f005b405008a296ca6d92ba14b5bde219449c\n",
+      "Git hash: ea6f48066961e5152439a5618d3b02c691e7f632\n",
       "\n",
-      "watermark : 2.5.0\n",
       "pandas    : 2.3.3\n",
       "openai    : 2.8.0\n",
-      "tqdm      : 4.67.1\n",
       "numpy     : 2.3.5\n",
+      "watermark : 2.5.0\n",
       "matplotlib: 3.10.7\n",
+      "tqdm      : 4.67.1\n",
       "\n"
      ]
     }
@@ -108,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "03cc2e1f",
    "metadata": {},
    "outputs": [],
@@ -127,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ae0313d2",
    "metadata": {},
    "outputs": [],
@@ -145,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "81fc83ad",
    "metadata": {},
    "outputs": [],
@@ -155,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "c126e84b",
    "metadata": {},
    "outputs": [
@@ -163,8 +154,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 10.9 ms, sys: 6.11 ms, total: 17.1 ms\n",
-      "Wall time: 2.3 s\n"
+      "CPU times: user 69.4 ms, sys: 16.7 ms, total: 86.1 ms\n",
+      "Wall time: 2.11 s\n"
      ]
     }
    ],
@@ -188,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "55d4c9ef",
    "metadata": {},
    "outputs": [
@@ -196,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Four score and seven years ago our fathers brought forth on this continent a new nation, conceived in liberty, and dedicated to the proposition that all men are created equal.\n",
+      "Four score and seven years ago our fathers brought forth on this continent a new nation, conceived in Liberty, and dedicated to the proposition that all men are created equal.\n",
       "\n"
      ]
     }
@@ -204,14 +195,6 @@
    "source": [
     "print(transcription)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b309b6c3-9601-4490-9b40-678fd7054edf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -231,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "6db6fd86",
    "metadata": {},
    "outputs": [],
@@ -253,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "6cbb88b3",
    "metadata": {},
    "outputs": [
@@ -261,8 +244,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 24.1 ms, sys: 17.7 ms, total: 41.9 ms\n",
-      "Wall time: 2.46 s\n"
+      "CPU times: user 7.1 ms, sys: 4.68 ms, total: 11.8 ms\n",
+      "Wall time: 3.26 s\n"
      ]
     }
    ],
@@ -285,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "a55a56b2",
    "metadata": {},
    "outputs": [],
@@ -295,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "717a1f60",
    "metadata": {},
    "outputs": [],
