--- a/2. Prompt Engineering.ipynb
+++ b/2. Prompt Engineering.ipynb
@@ -78,16 +78,16 @@
       "CPU cores   : 16\n",
       "Architecture: 64bit\n",
       "\n",
-      "Git hash: ea6f48066961e5152439a5618d3b02c691e7f632\n",
+      "Git hash: 107b7c3665c838b850317aff195e9ae6ca6dcf42\n",
       "\n",
-      "langchain_core  : 1.0.5\n",
-      "watermark       : 2.5.0\n",
-      "langchain       : 1.0.7\n",
-      "tqdm            : 4.67.1\n",
+      "numpy           : 2.3.5\n",
       "matplotlib      : 3.10.7\n",
       "langchain_openai: 1.0.3\n",
+      "tqdm            : 4.67.1\n",
+      "langchain       : 1.0.7\n",
+      "langchain_core  : 1.0.5\n",
+      "watermark       : 2.5.0\n",
       "pandas          : 2.3.3\n",
-      "numpy           : 2.3.5\n",
       "\n"
      ]
     }
@@ -318,7 +318,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Life's meaning is to ask AI assistants deep questions and pretend you’ll follow their advice.\n"
+      "42, apparently. But personally, I think it’s just finding WiFi that actually works everywhere.\n"
      ]
     }
    ],
@@ -882,8 +882,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 4 suits in the deck. Each suit has 3 face cards.  \n",
-      "So, 4 × 3 = 12 face cards in total.  \n",
+      "There are 4 suits, and each suit has 3 face cards.  \n",
+      "4 × 3 = 12 face cards.  \n",
       "The answer is 12\n"
      ]
     }
@@ -966,25 +966,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Let's break it down step by step:\n",
+      "Sure, let’s break it down step by step:\n",
       "\n",
-      "**Step 1: Calculate Total Fight Duration**\n",
+      "**Step 1: Find the duration of the fight in minutes**\n",
+      "- Each round is 3 minutes.\n",
+      "- There are 5 rounds.\n",
+      "- Total duration = 5 rounds × 3 minutes per round = **15 minutes**\n",
       "\n",
-      "- Each round is **3 minutes**\n",
-      "- There are **5 rounds**\n",
-      "- Total time = 3 minutes/round × 5 rounds = **15 minutes**\n",
+      "**Step 2: Find punches thrown per minute**\n",
+      "- Joe throws **25 punches per minute**.\n",
       "\n",
-      "**Step 2: Calculate Joe's Punches Per Minute**\n",
-      "\n",
-      "- Joe throws **25 punches per minute**\n",
-      "\n",
-      "**Step 3: Calculate Total Punches**\n",
-      "\n",
+      "**Step 3: Find the total number of punches**\n",
       "- Total punches = punches per minute × total minutes\n",
-      "- Total punches = 25 punches/min × 15 min = **375 punches**\n",
+      "- Total punches = 25 × 15 = **375**\n",
       "\n",
       "**Final Answer:**  \n",
-      "**Joe throws a total of 375 punches.**\n"
+      "Joe throws **375 punches** during the fight.\n"
      ]
     }
    ],
@@ -1010,15 +1007,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sure! Let’s break it down step by step:\n",
+      "Let's break it down step by step:\n",
       "\n",
       "1. **Roger starts with 5 tennis balls.**\n",
       "\n",
-      "2. **He buys 2 cans. Each can has 3 tennis balls.**\n",
-      "   - So, tennis balls from cans = 2 cans × 3 tennis balls/can = 6 tennis balls\n",
+      "2. **He buys 2 more cans** of tennis balls.\n",
       "\n",
-      "3. **Add the tennis balls he started with and the new ones:**\n",
-      "   - 5 (original) + 6 (from cans) = **11 tennis balls**\n",
+      "3. **Each can has 3 tennis balls.**  \n",
+      "   So, the total balls in the cans = 2 cans × 3 balls per can = **6 balls**\n",
+      "\n",
+      "4. **Total tennis balls Roger has now:**  \n",
+      "   Balls he started with + Balls from cans = 5 + 6 = **11**\n",
       "\n",
       "**Final Answer:**  \n",
       "Roger has **11 tennis balls** now.\n"
