--- a/3. NLP with HuggingFace.ipynb
+++ b/3. NLP with HuggingFace.ipynb
@@ -83,15 +83,15 @@
       "CPU cores   : 16\n",
       "Architecture: 64bit\n",
       "\n",
-      "Git hash: ea6f48066961e5152439a5618d3b02c691e7f632\n",
+      "Git hash: 107b7c3665c838b850317aff195e9ae6ca6dcf42\n",
       "\n",
-      "tqdm        : 4.67.1\n",
-      "transformers: 4.57.1\n",
-      "matplotlib  : 3.10.7\n",
-      "watermark   : 2.5.0\n",
-      "networkx    : 3.5\n",
-      "numpy       : 2.3.5\n",
       "pandas      : 2.3.3\n",
+      "tqdm        : 4.67.1\n",
+      "watermark   : 2.5.0\n",
+      "transformers: 4.57.1\n",
+      "numpy       : 2.3.5\n",
+      "matplotlib  : 3.10.7\n",
+      "networkx    : 3.5\n",
       "\n"
      ]
     }
@@ -810,6 +810,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "06f1f905-0a21-45ce-88e9-bac196a9873d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'an exchange of Megatron'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "email[336:359]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9e85dbff",
    "metadata": {},
@@ -819,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "622e92a8",
    "metadata": {},
    "outputs": [
@@ -840,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "67509037",
    "metadata": {},
    "outputs": [
@@ -887,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "f9470957",
    "metadata": {},
    "outputs": [
@@ -915,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "34e82ae1",
    "metadata": {},
    "outputs": [],
@@ -933,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "228b6c86",
    "metadata": {},
    "outputs": [
@@ -944,7 +965,7 @@
        " {'label': 'NEGATIVE', 'score': 0.9991129040718079}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "dfb189e1",
    "metadata": {},
    "outputs": [],
@@ -981,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "96aa16d7",
    "metadata": {},
    "outputs": [
@@ -1076,7 +1097,7 @@
        "[3886 rows x 1 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,14 +1116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "6a11da71",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dad701a6264d4ad18543991cb26bfff0",
+       "model_id": "5ac1dcc434cc48fd80fbf2b797780332",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1120,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "1741a345",
    "metadata": {},
    "outputs": [],
@@ -1130,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "bdebe2d9",
    "metadata": {},
    "outputs": [
@@ -1237,7 +1258,7 @@
        "[3886 rows x 2 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "619df299",
    "metadata": {},
    "outputs": [
@@ -1266,7 +1287,7 @@
        "'#AAPL:The 10 best Steve Jobs emails ever...http://t.co/82G1kL94tx'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "21e745e9",
    "metadata": {},
    "outputs": [
@@ -1291,7 +1312,7 @@
        "  'end': 28}]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "5847a4a4",
    "metadata": {},
    "outputs": [],
@@ -1328,14 +1349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "6fc034ad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acf9056751b341c0b14a4c86c8a15cd0",
+       "model_id": "08d1f6c59307442b9e53d6a4293c4033",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1361,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "024041ca",
    "metadata": {},
    "outputs": [],
@@ -1371,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "d3e47656",
    "metadata": {},
    "outputs": [
@@ -1527,7 +1548,7 @@
        "[3886 rows x 5 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1546,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "9493a35c",
    "metadata": {},
    "outputs": [],
@@ -1556,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "f59b3aa2",
    "metadata": {},
    "outputs": [
@@ -1712,7 +1733,7 @@
        "[291 rows x 5 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1731,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "9c5a1cc6",
    "metadata": {},
    "outputs": [],
@@ -1749,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "d921e34f",
    "metadata": {},
    "outputs": [],
@@ -1759,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "e677b7bc",
    "metadata": {},
    "outputs": [],
@@ -1770,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "8326a50a",
    "metadata": {},
    "outputs": [],
@@ -1780,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "ce76a9b9",
    "metadata": {},
    "outputs": [
@@ -1872,7 +1893,7 @@
        "Job              -0.800000     10"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
