--- a/4. Whisper.ipynb
+++ b/4. Whisper.ipynb
@@ -73,14 +73,14 @@
       "CPU cores   : 16\n",
       "Architecture: 64bit\n",
       "\n",
-      "Git hash: ea6f48066961e5152439a5618d3b02c691e7f632\n",
+      "Git hash: 107b7c3665c838b850317aff195e9ae6ca6dcf42\n",
       "\n",
       "pandas    : 2.3.3\n",
-      "openai    : 2.8.0\n",
+      "tqdm      : 4.67.1\n",
       "numpy     : 2.3.5\n",
       "watermark : 2.5.0\n",
       "matplotlib: 3.10.7\n",
-      "tqdm      : 4.67.1\n",
+      "openai    : 2.8.0\n",
       "\n"
      ]
     }
@@ -154,8 +154,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 69.4 ms, sys: 16.7 ms, total: 86.1 ms\n",
-      "Wall time: 2.11 s\n"
+      "CPU times: user 68.3 ms, sys: 14 ms, total: 82.3 ms\n",
+      "Wall time: 1.9 s\n"
      ]
     }
    ],
@@ -244,8 +244,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7.1 ms, sys: 4.68 ms, total: 11.8 ms\n",
-      "Wall time: 3.26 s\n"
+      "CPU times: user 7.28 ms, sys: 4.06 ms, total: 11.3 ms\n",
+      "Wall time: 2.86 s\n"
      ]
     }
    ],
@@ -279,6 +279,77 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "1e2263d1-4869-4da0-bd11-49f4105b1959",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__annotations__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__firstlineno__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__static_attributes__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'aclose',\n",
+       " 'aiter_bytes',\n",
+       " 'aiter_lines',\n",
+       " 'aiter_raw',\n",
+       " 'aiter_text',\n",
+       " 'aread',\n",
+       " 'astream_to_file',\n",
+       " 'charset_encoding',\n",
+       " 'close',\n",
+       " 'content',\n",
+       " 'encoding',\n",
+       " 'iter_bytes',\n",
+       " 'iter_lines',\n",
+       " 'iter_raw',\n",
+       " 'iter_text',\n",
+       " 'json',\n",
+       " 'read',\n",
+       " 'response',\n",
+       " 'stream_to_file',\n",
+       " 'text',\n",
+       " 'write_to_file']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(audio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "717a1f60",
    "metadata": {},
    "outputs": [],
